--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -225,12 +225,12 @@
 
   <!-- Mentions légales -->
   <div class="footer-info">
-    <a href="/website/mentions-legales">Mentions Légales</a>
+    <a href="/mentions-legales">Mentions Légales</a>
   </div>
 
   <!-- </div> -->
   <!-- Infos en bas à droite -->
 <!-- <div class="footer-info">
-  Quartier Guy Moquet, 17ème arr., Paris • <a href="/website/mentions-legales">Mentions Légales</a>
+  Quartier Guy Moquet, 17ème arr., Paris • <a href="/mentions-legales">Mentions Légales</a>
 </div> -->
 </footer>
