--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,7 +6,7 @@ import logo from "../assets/logo.webp";
 <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <!-- Logo + texte -->
-    <a class="navbar-item brand-link" href="/website">
+    <a class="navbar-item brand-link" href="/">
       <Image src={logo} alt="Logo de In the Pouchett" />
       <span class="brand-text">In The Pouchett</span>
     </a>
@@ -22,23 +22,23 @@ import logo from "../assets/logo.webp";
     <div class="navbar-end">
 
       <div class="navbar-item has-dropdown is-hoverable desktop-dropdown">
-        <a class="navbar-link" href="/website">Le Studio</a>
+        <a class="navbar-link" href="/">Le Studio</a>
         <div class="navbar-dropdown">
-          <a class="navbar-item" href="/website/#reference">Références</a>
-          <a class="navbar-item" href="/website/#materiel">Le Matériel</a>
+          <a class="navbar-item" href="/#reference">Références</a>
+          <a class="navbar-item" href="/#materiel">Le Matériel</a>
         </div>
       </div>
 
       <div class="navbar-item has-dropdown is-hoverable desktop-dropdown">
-        <a class="navbar-link" href="/website/live-sessions">Live Sessions</a>
+        <a class="navbar-link" href="/live-sessions">Live Sessions</a>
         <div class="navbar-dropdown">
-          <a class="navbar-item" href="/website/live-sessions/#formats">Formats</a>
-          <a class="navbar-item" href="/website/live-sessions/#diffusion">Diffusion</a>
-          <a class="navbar-item" href="/website/live-sessions/#tarifs">Tarifs</a>
+          <a class="navbar-item" href="/live-sessions/#formats">Formats</a>
+          <a class="navbar-item" href="/live-sessions/#diffusion">Diffusion</a>
+          <a class="navbar-item" href="/live-sessions/#tarifs">Tarifs</a>
         </div>
       </div>
 
-      <a class="navbar-item desktop-item" href="/website/qui-sommes-nous">
+      <a class="navbar-item desktop-item" href="/qui-sommes-nous">
         Qui sommes-nous ?
       </a>
 
