--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const data = await getCollection("videos");
   .cover-image {
     background:
       linear-gradient(0deg, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 100%),
-      url("/website/cover.jpg") center/cover;
+      url("/cover.jpg") center/cover;
     text-align: center;
     font-weight: 700;
 
@@ -89,7 +89,7 @@ const data = await getCollection("videos");
     .cover-image {
       background:
         linear-gradient(0deg, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 100%),
-        url("/website/cover.jpg") center/cover;
+        url("/cover.jpg") center/cover;
       text-align: center;
       font-weight: 700;
 
@@ -425,47 +425,47 @@ const data = await getCollection("videos");
       <div class="studio-wrapper">
         <div class="studio-gallery">
           <div class="studio-item tall">
-            <img src="/website/studio_large_portrait.jpg" alt="Vue générale du studio" />
+            <img src="/studio_large_portrait.jpg" alt="Vue générale du studio" />
             <div class="caption">Vue générale du studio</div>
           </div>
           <div class="studio-item tall wide">
-            <img src="/website/piano_close.jpg" alt="Piano acoustique" />
+            <img src="/piano_close.jpg" alt="Piano acoustique" />
             <!-- <div class="caption">Console de mixage</div> -->
           </div>
           <div class="studio-item">
-            <img src="/website/fader.jpg" alt="Fader" />
+            <img src="/fader.jpg" alt="Fader" />
             <!-- <div class="caption">Cabine d'enregistrement</div> -->
           </div>
           <div class="studio-item">
-            <img src="/website/piano1.jpg" alt="Piano droit" />
+            <img src="/piano1.jpg" alt="Piano droit" />
             <div class="caption">Piano droit</div>
           </div>
           <div class="studio-item tall">  
-            <img src="/website/oc818.jpg" alt="Austrian Audio OC818" />
+            <img src="/oc818.jpg" alt="Austrian Audio OC818" />
             <!-- <div class="caption">Espace d'accueil</div> -->
           </div>
           <div class="studio-item tall wide">
-            <img src="/website/flamand-cache.jpg" alt="Flamand Rose" style="object-position: 50% 30%;" />
+            <img src="/flamand-cache.jpg" alt="Flamand Rose" style="object-position: 50% 30%;" />
             <!-- <div class="caption">Espace d'accueil 2</div> -->
           </div>
           <div class="studio-item">
-            <img src="/website/d190-mic.jpg" alt="AKG D190C" style="object-position: 50% 10%;" />
+            <img src="/d190-mic.jpg" alt="AKG D190C" style="object-position: 50% 10%;" />
             <!-- <div class="caption">Instruments et matériel 2</div> -->
           </div>
           <div class="studio-item tall">
-            <img src="/website/soyuz-013.jpg" alt="Soyuz 013 fet" />
+            <img src="/soyuz-013.jpg" alt="Soyuz 013 fet" />
             <!-- <div class="caption">Instruments et matériel 3</div> -->
           </div>
           <div class="studio-item wide">
-            <img src="/website/machine_patchbay.jpg" alt="Control Room" />
+            <img src="/machine_patchbay.jpg" alt="Control Room" />
             <div class="caption">Control Room</div>
           </div>
           <div class="studio-item tall">
-            <img src="/website/close_mic_green.jpg" alt="Prise de son" />
+            <img src="/close_mic_green.jpg" alt="Prise de son" />
             <div class="caption">Prise de son</div>
           </div>
           <div class="studio-item">
-            <img src="/website/bureau_large.jpg" alt="Bureau Studio" />
+            <img src="/bureau_large.jpg" alt="Bureau Studio" />
             <div class="caption">Bureau Studio</div>
           </div>
         </div>
@@ -551,9 +551,9 @@ const data = await getCollection("videos");
 
       <!-- Images équipement -->
       <div class="materiel-images instrument-carousel">
-        <img src="/website/hardware_close_blur.jpg" alt="Studio Hardware" />
-        <img src="/website/soyuz_013_close.jpg" alt="Micros Soyuz" style="object-position: 50% 25%;" />
-        <img src="/website/fader.jpg" alt="Amplis Orange" />
+        <img src="/hardware_close_blur.jpg" alt="Studio Hardware" />
+        <img src="/soyuz_013_close.jpg" alt="Micros Soyuz" style="object-position: 50% 25%;" />
+        <img src="/fader.jpg" alt="Amplis Orange" />
       </div>
 
       <!-- Colonne 6: Instruments avec toutes les sous-catégories -->
@@ -623,9 +623,9 @@ const data = await getCollection("videos");
 
       <!-- Images équipement 2 -->
       <div class="materiel-images-bottom instrument-carousel">
-        <img src="/website/piano_close_right.jpg" alt="Piano du studio" />
-        <img src="/website/deepmind_close.jpg" alt="Synthé deepmind" style="object-position: 50% 90%;" />
-        <img src="/website/guitare_acoustique.jpg" alt="Guitare acoustique" style="object-position: 50% 40%;"/>
+        <img src="/piano_close_right.jpg" alt="Piano du studio" />
+        <img src="/deepmind_close.jpg" alt="Synthé deepmind" style="object-position: 50% 90%;" />
+        <img src="/guitare_acoustique.jpg" alt="Guitare acoustique" style="object-position: 50% 40%;"/>
       </div>
     </div>
   </div>
