--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -181,7 +181,7 @@
     <div class="contact-lines">
       <div class="contact-line">
         <i class="fa-solid fa-location-dot"></i>
-        <span>Quartier Guy Moquet, 17ème arr., Paris</span>
+        <span>Quartier des Épinettes, 17ème arr., Paris</span>
       </div>
       <div class="contact-line">
         <i class="fa-solid fa-envelope"></i>
@@ -190,6 +190,8 @@
       <div class="contact-line">
         <i class="fa-solid fa-phone"></i>
         <a href="tel:+33695065809">06 95 06 58 09</a>
+        <span>•</span>
+        <a href="tel:+33699935223">06 99 93 52 23</a>
       </div>
     </div>
   </div>
