--- a/src/pages/qui-sommes-nous.astro
+++ b/src/pages/qui-sommes-nous.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro";
 import { Picture } from "astro:assets";
-import Clem from "../assets/clem.jpg";
+import Clem from "../assets/clement_maniette.jpg";
 import Louis from "../assets/louis_jaumaux.jpg";
 ---
 
