--- a/src/pages/qui-sommes-nous.astro
+++ b/src/pages/qui-sommes-nous.astro
@@ -39,7 +39,7 @@ import Louis from "../assets/louis_jaumaux.jpg";
         In The Pouchett c'est avant tout deux amis musiciens et passionnés de musique Live
         qui décidèrent en 2023 de monter ce projet un peu fou : Transformer leur appartement parisien en studio
         d'enregistrement spécialisé dans les Live Sessions. 
-        L'objectif est d'apporter leur patte aussi bien sonore que visuelle à à ce format déjà bien connu, 
+        L'objectif est d'apporter leur patte aussi bien sonore que visuelle à ce format déjà bien connu, 
         en mettant l'accent sur l'atmosphère chaleureuse du lieu et de penser l'espace pour la musique Live et l'image.
       </p>
     </div>
