update title site

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,14 +95,14 @@ function ensureTrailing(href: string) {
   }
 </style>
 
-<Layout title="In the Pouchett — Enregistrements, Mixages, Live Sessions" description="In the Pouchett: studio d'enregistrement à Paris spécialisé dans les Live Sessions. Captation audio/vidéo, mixage et mastering." canonical="/">
+<Layout title="In the Pouchett — Enregistrement, Mixage, Mastering Live Sessions" description="In the Pouchett: studio d'enregistrement à Paris spécialisé dans les Live Sessions. Captation audio/vidéo, mixage et mastering." canonical="/">
   <Navbar slot="navbar" />
 
   <!-- Cover modifiée -->
   <div class="hero cover-image">
     <div class="container hero-body">
       <h1 class="title">IN THE POUCHETT</h1>
-      <h2 class="subtitle">Enregistrements, Mixages, Live Sessions</h2>
+      <h2 class="subtitle">Enregistrement, Mixage, Mastering, Live Sessions</h2>
     </div>
   </div>
 
